[package]
name = "epub2"
version = "0.1.0"
edition = "2024"
description = "Rust library for creating EPUB 2.1 files"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/rs-epub2"
homepage = "https://github.com/javiorfo/rs-epub2#readme"
keywords = ["epub", "epub2.1", "epub-generator"]

[dependencies]
